--- a/specs/software_specs.bib
+++ b/specs/software_specs.bib
@@ -19,4 +19,33 @@
 	isbn={0130851981}
 }
 
+@article{Zhu_09,
+author={Zhu,LiMin and Luo,HongGen and Zhang,Xu},
+year={2009},
+title={Uncertainty and sensitivity analysis for camera calibration},
+journal={The Industrial Robot},
+volume={36},
+number={3},
+pages={238-243},
+abstract={The purpose of this paper is to present a unified approach to uncertainty and sensitivity analysis for camera calibration. The approach is based on the fact that camera calibration is a problem of parameter estimation and the parameters of interest are given by the optimal solution of a least-squares problem. A system of linear equations relating the errors of the extracted feature points to the errors of the estimated parameters is derived, and the expression of the covariance matrix of the estimated parameters is given. Also, a system of linear equations characterizing the influence of the uncalibrated parameters on the calibrated ones is presented. Simulation results show that the cameras position and orientation are less sensitive to the lens distortion than the offset of the image center. The models developed can be applied to optimize the layout of the calibration marks and design multiple-stage calibration algorithm. The rationale can also find applications in image registration and robot calibration. A generic approach is proposed to perform uncertainty and sensitivity analysis for camera calibration. By using the optimality condition for an unconstrained optimization problem, two mathematical models are developed in a unified framework. [PUBLICATION ABSTRACT]},
+isbn={0143991X},
+language={English},
+url={https://www.lib.uwo.ca/cgi-bin/ezpauthn.cgi/docview/217005706?accountid=15115},
+}
+}
+
+@article{weng_92, 
+author={Weng, J. and Cohen, P. and Herniou, M.}, 
+journal={Pattern Analysis and Machine Intelligence, IEEE Transactions on}, 
+title={Camera calibration with distortion models and accuracy evaluation }, 
+year={1992}, 
+month={oct}, 
+volume={14}, 
+number={10}, 
+pages={965 -980}, 
+abstract={A camera model that accounts for major sources of camera distortion, namely, radial, decentering, and thin prism distortions is presented. The proposed calibration procedure consists of two steps: (1) the calibration parameters are estimated using a closed-form solution based on a distribution-free camera model; and (2) the parameters estimated in the first step are improved iteratively through a nonlinear optimization, taking into account camera distortions. According to minimum variance estimation, the objective function to be minimized is the mean-square discrepancy between the observed image points and their inferred image projections computed with the estimated calibration parameters. The authors introduce a type of measure that can be used to directly evaluate the performance of calibration and compare calibrations among different systems. The validity and performance of the calibration procedure are tested with both synthetic data and real images taken by tele- and wide-angle lenses}, 
+keywords={CCD camera;accuracy;camera calibration;closed-form solution;computer vision;distortion models;inferred image projections;mean-square discrepancy;nonlinear optimization;objective function;observed image points;CCD image sensors;calibration;cameras;computer vision;optical information processing;optimisation;}, 
+doi={10.1109/34.159901}, 
+ISSN={0162-8828},}
+
 
