Added figures for usecase

--- a/specs/software_specs.tex
+++ b/specs/software_specs.tex
@@ -238,6 +238,13 @@ Use Cases define the process the system will take to meet the needs of the users
 \label{fig:guc}
 \end{figure}
 
+\begin{figure}[htp]
+\centering
+\includegraphics[scale=1.0]{figs/users.2}
+\caption{Generic User Cases 1}
+\label{fig:guc1}
+\end{figure}
+
 
 As described in \ref{fig:guc}, users can perform the camera calibration procedure as defined in Chapter 2 of \cite{CC}. All users of the system can perform a camera calibration procedure. 
 
