--- a/presentation/seminar.tex
+++ b/presentation/seminar.tex
@@ -1,9 +1,11 @@
-\documentclass{beamer}
+\documentclass[xcolor=dvipsnames]{beamer}
+\usecolortheme[named=Plum]{structure}
+\usetheme[height=7mm]{Rochester}
 
 \title[Simulation Calibration]{Simulating Camera Calibration}
 \subtitle[Errors]{Building Awareness of Uncertainity Propagation in Camera Calibration} 
 
-\autor[K. Thakore]{Kartik Thakore BESc}
+\author[K. Thakore]{Kartik Thakore BESc}
 \institute[UWO] {
   Department of BioMedical Engineering\\
   University of Western Ontario\\
@@ -12,6 +14,8 @@
 }
 \date[March 2011]{March 05, 2011}
 
+\begin{document}
+
 %Title Frame
 \begin{frame}[plain]
   \titlepage
@@ -19,8 +23,27 @@
 
 \begin{frame}{Overview}
     \begin{itemize}
-     \item Stuff   
+     \item Introduction
+      \begin{itemize}
+        \item Computer Assisted Surgery
+        \item Uncertainty Propagation Problem
+        \item Calibration
+      \end{itemize}
+      \item Method
+       \begin{itemize}
+        \item Simulation
+        \item Video Overlay
+        \item Training
+       \end{itemize} 
+       \item Results
+       \item Conclusions
+       \item Future Works
+       \item Acknowlegements
     \end{itemize}
+\end{frame}
+
+\begin{frame}
+
 \end{frame}
 
 
