Changed presentation for seminar

--- a/Documents/presentation/seminar.tex
+++ b/Documents/presentation/seminar.tex
@@ -25,9 +25,8 @@
     \begin{itemize}
      \item Introduction
       \begin{itemize}
-        \item Computer Assisted Surgery
+        \item Transformation
         \item Uncertainty Propagation Problem
-        \item Calibration
       \end{itemize}
       \item Method
        \begin{itemize}
@@ -42,8 +41,23 @@
     \end{itemize}
 \end{frame}
 
-\begin{frame}
+\begin{frame}{Introduction}
 
+\end{frame}
+
+\begin{frame}{Method}
+\end{frame}
+
+\begin{frame}{Results}
+\end{frame}
+
+\begin{frame}{Conclusions}
+\end{frame}
+
+\begin{frame}{Future Works}
+\end{frame}
+
+\begin{frame}{Acknowlegements}
 \end{frame}
 
 
