Sending images to server and sving it in temp

--- a/Documents/presentation/seminar.tex
+++ b/Documents/presentation/seminar.tex
@@ -25,7 +25,7 @@
     \begin{itemize}
      \item Introduction
       \begin{itemize}
-        \item Transformation
+        \item Transformations 
         \item Uncertainty Propagation Problem
       \end{itemize}
       \item Method
