Adding seminar tex

--- a/Documents/presentation/seminar.tex
+++ b/Documents/presentation/seminar.tex
@@ -42,10 +42,20 @@
 \end{frame}
 
 \begin{frame}{Introduction}
-
+\begin{itemize}
+    \item Medical Imaging
+    \item Computer Vision
+    \item Camera Calibration
+    \item Transformation
+    \item Parameters
+    \item Uncertainty 
+\end{itemize}
 \end{frame}
 
 \begin{frame}{Method}
+\begin{itemize}
+    \item Stuff
+\end{itemize}
 \end{frame}
 
 \begin{frame}{Results}
